[gd_scene load_steps=11 format=3 uid="uid://dpl4ejb65qb1c"]

[ext_resource type="PackedScene" uid="uid://ciow4qxa67ws8" path="res://scenes/ui/upgrade_button.tscn" id="1_e3qxy"]
[ext_resource type="Script" uid="uid://dv8ufg80ig1s6" path="res://scripts/ui/upgrade_menu.gd" id="1_ethjp"]
[ext_resource type="Texture2D" uid="uid://b87k0yrl6r2f3" path="res://assets/images/skill_icons/250 WARRIOR ICONS (pack by batareya)/238.png" id="2_jkuc8"]
[ext_resource type="Texture2D" uid="uid://ilbwjueiyip" path="res://assets/images/skill_icons/250 WARRIOR ICONS (pack by batareya)/239.png" id="3_6vqdt"]
[ext_resource type="Texture2D" uid="uid://crxrpvkt13uco" path="res://assets/images/skill_icons/250 WARRIOR ICONS (pack by batareya)/240.png" id="4_ixicc"]
[ext_resource type="Texture2D" uid="uid://wuju17c0xlbb" path="res://assets/images/skill_icons/250 WARRIOR ICONS (pack by batareya)/4.png" id="5_chbti"]
[ext_resource type="Texture2D" uid="uid://d1h7n6r4faquc" path="res://assets/images/skill_icons/250 WARRIOR ICONS (pack by batareya)/1.png" id="6_ethjp"]
[ext_resource type="Texture2D" uid="uid://dnbp0vgccn1xn" path="res://assets/images/skill_icons/250 WARRIOR ICONS (pack by batareya)/3.png" id="7_0isde"]
[ext_resource type="Theme" uid="uid://csix15cdk72y3" path="res://Windows95.tres" id="9_ykgnc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_on7o7"]
bg_color = Color(0.12549, 0.54902, 0.443137, 1)

[node name="UpgradeMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ethjp")

[node name="GreenBG" type="Panel" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
theme_override_styles/panel = SubResource("StyleBoxFlat_on7o7")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
top_level = true
layout_mode = 0
offset_left = 566.0
offset_top = 71.0
offset_right = 694.0
offset_bottom = 111.0

[node name="PointsLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Points: "

[node name="PistolMenuButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Pistol"

[node name="ShotgunMenuButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Shotgun"

[node name="RifleMenuButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Rifle"

[node name="ResetButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Reset Upgrades"

[node name="BGPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Pistol" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PistolButton1" parent="Pistol" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_left = 576.0
offset_top = 139.0
offset_right = 704.0
offset_bottom = 267.0
tooltip_text = "Ammo Refund"
upgrade_id = "pistol_ammo_refund"

[node name="PistolButton2" parent="Pistol/PistolButton1" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_top = 200.0
offset_bottom = 328.0
tooltip_text = "Piercing Shot"
upgrade_id = "pistol_piercing"

[node name="PistolButton3" parent="Pistol/PistolButton1/PistolButton2" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_top = 210.175
offset_bottom = 338.175
tooltip_text = "Lifesteal on kills"
upgrade_id = "pistol_lifesteal"

[node name="Shotgun" type="Control" parent="."]
visible = false
anchors_preset = 0

[node name="ShotgunButton1" parent="Shotgun" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_left = 576.0
offset_top = 139.0
offset_right = 704.0
offset_bottom = 267.0
texture_normal = ExtResource("5_chbti")
upgrade_id = "shotgun_precision"
property_name = "spread"
amount = -3.0
is_stat_upgrade = true

[node name="ShotgunButton2" parent="Shotgun/ShotgunButton1" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_top = 200.0
offset_bottom = 328.0
texture_normal = ExtResource("6_ethjp")
upgrade_id = "shotgun_shield_break"

[node name="ShotgunButton3" parent="Shotgun/ShotgunButton1/ShotgunButton2" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_top = 210.175
offset_bottom = 338.175
texture_normal = ExtResource("7_0isde")
upgrade_id = "shotgun_glitch_shot"

[node name="Rifle" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="RifleButton1" parent="Rifle" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_left = 576.0
offset_top = 139.0
offset_right = 704.0
offset_bottom = 267.0
tooltip_text = "Increase your damage by 5"
texture_normal = ExtResource("2_jkuc8")
upgrade_id = "rifle_firerate"
property_name = "damage"
amount = 5.0

[node name="RifleButton2" parent="Rifle/RifleButton1" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_top = 200.0
offset_bottom = 328.0
tooltip_text = "Explanation of upgrade 2"
disabled = true
texture_normal = ExtResource("3_6vqdt")
upgrade_id = "rifle_quickness"
property_name = "damage"
amount = 5.0

[node name="RifleButton3" parent="Rifle/RifleButton1/RifleButton2" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_top = 210.59
offset_bottom = 338.59
tooltip_text = "Explanation of upgrade 3"
disabled = true
texture_normal = ExtResource("4_ixicc")
upgrade_id = "rifle_chain_shot"
property_name = "damage"
amount = 5.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 854.0
offset_top = 150.0
offset_right = 1218.0
offset_bottom = 691.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 993.0
offset_top = 155.0
offset_right = 1073.0
offset_bottom = 178.0
text = "Upgrade 1"

[node name="PanelContainer" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 73.0
offset_top = 180.0
offset_right = -28.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_ykgnc")

[node name="TabContainer" type="TabContainer" parent="PanelContainer"]
layout_mode = 2
offset_left = 8.0
offset_top = 33.0
offset_right = 1167.0
offset_bottom = 508.0
theme = ExtResource("9_ykgnc")
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
current_tab = 0

[node name="Pistol" type="Control" parent="PanelContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="UpgradeButton" parent="PanelContainer/TabContainer/Pistol" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_left = 78.0
offset_top = 91.0
offset_right = 206.0
offset_bottom = 219.0

[node name="Button" type="Button" parent="PanelContainer/TabContainer/Pistol"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 12.0
text = "Upgrade 1"

[node name="Rifle" type="Control" parent="PanelContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Shotgun" type="Control" parent="PanelContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[connection signal="pressed" from="HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="Rifle/RifleButton1" to="." method="_on_rifle_button_1_pressed"]
[connection signal="pressed" from="Rifle/RifleButton1/RifleButton2" to="." method="_on_rifle_button_2_pressed"]
[connection signal="pressed" from="Rifle/RifleButton1/RifleButton2/RifleButton3" to="." method="_on_rifle_button_3_pressed"]
