[gd_scene load_steps=9 format=3 uid="uid://dpl4ejb65qb1c"]

[ext_resource type="PackedScene" uid="uid://ciow4qxa67ws8" path="res://scenes/ui/upgrade_button.tscn" id="1_e3qxy"]
[ext_resource type="Script" uid="uid://dv8ufg80ig1s6" path="res://scripts/ui/upgrade_menu.gd" id="1_ethjp"]
[ext_resource type="Texture2D" uid="uid://bkjihr2l1ap0n" path="res://sprites/skill_icons/250 WARRIOR ICONS (pack by batareya)/238.png" id="2_jkuc8"]
[ext_resource type="Texture2D" uid="uid://dwy61y3d6c1g" path="res://sprites/skill_icons/250 WARRIOR ICONS (pack by batareya)/239.png" id="3_6vqdt"]
[ext_resource type="Texture2D" uid="uid://frqx5gf1ge6o" path="res://sprites/skill_icons/250 WARRIOR ICONS (pack by batareya)/240.png" id="4_ixicc"]
[ext_resource type="Texture2D" uid="uid://b0481f7j6lm1q" path="res://sprites/skill_icons/250 WARRIOR ICONS (pack by batareya)/4.png" id="5_chbti"]
[ext_resource type="Texture2D" uid="uid://doi3intbu4wv3" path="res://sprites/skill_icons/250 WARRIOR ICONS (pack by batareya)/1.png" id="6_ethjp"]
[ext_resource type="Texture2D" uid="uid://b7mh23nwow8vo" path="res://sprites/skill_icons/250 WARRIOR ICONS (pack by batareya)/3.png" id="7_0isde"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ethjp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
top_level = true
layout_mode = 0
offset_left = 566.0
offset_top = 71.0
offset_right = 694.0
offset_bottom = 111.0

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Pistol"

[node name="Button2" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Shotgun"

[node name="ResetButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Reset Upgrades"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PistolButton1" parent="." instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_left = 576.0
offset_top = 139.0
offset_right = 704.0
offset_bottom = 267.0
tooltip_text = "Increase your damage by 5"
texture_normal = ExtResource("2_jkuc8")

[node name="PistolButton2" parent="PistolButton1" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_top = 200.0
offset_bottom = 328.0
tooltip_text = "Explanation of upgrade 2"
disabled = true
texture_normal = ExtResource("3_6vqdt")

[node name="PistolButton3" parent="PistolButton1/PistolButton2" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_top = 210.59
offset_bottom = 338.59
tooltip_text = "Explanation of upgrade 3"
disabled = true
texture_normal = ExtResource("4_ixicc")

[node name="Shotgun" type="Node" parent="."]

[node name="ShotgunButton1" parent="Shotgun" instance=ExtResource("1_e3qxy")]
visible = false
offset_left = 576.0
offset_top = 139.0
offset_right = 704.0
offset_bottom = 267.0
texture_normal = ExtResource("5_chbti")

[node name="ShotgunButton2" parent="Shotgun/ShotgunButton1" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_top = 200.0
offset_bottom = 328.0
texture_normal = ExtResource("6_ethjp")

[node name="ShotgunButton3" parent="Shotgun/ShotgunButton1/ShotgunButton2" instance=ExtResource("1_e3qxy")]
layout_mode = 0
offset_top = 200.0
offset_bottom = 328.0
texture_normal = ExtResource("7_0isde")

[connection signal="pressed" from="HBoxContainer/ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="PistolButton1" to="." method="_on_pistol_button_1_pressed"]
